--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <span id="doingA3">A Hint of a Tint</span>
                             </div> 
                             <div class="doing">
-                                <span class="doingB">A roguelike with two modes of play, best played with a gamepad. Story mode has no perma-death. Survival mode does. Click for more info and download at RpgMaker.net</span>
+                                <span class="doingB">A roguelike with two modes of play. Story mode has no perma-death. Survival mode does. Best played with a gamepad. Click for more info and download at RpgMaker.net</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
@@ -181,7 +181,7 @@
                                 <span id="doingA5">The PK Girl</span>
                             </div> 
                             <div class="doing">
-                                <span class="doingB">Interactive fiction with a romance element. Requires ADRIFT Runner 4.0. Click for more info and download at adrift.co (also available at renai.us and ifarchive.org).
+                                <span class="doingB">Interactive fiction with mystery, sci-fi, and romance themes. Requires ADRIFT Runner 4.0. Click for more info and download at adrift.co (also available at renai.us and ifarchive.org).
                                 </span>
                             </div>
                             <div class="doing">
@@ -233,7 +233,7 @@
                                 <span id="doingA7">Goblin Maze</span>
                             </div> 
                             <div class="doing">
-                                <span class="doingB">Top-down adventure in the style of <span style="font-style:italic;">The Legend of Zelda</span>. Probably there is no browser that can run this java applet today.</span>
+                                <span class="doingB">Top-down action adventure in the style of <span style="font-style:italic;">The Legend of Zelda</span>. Probably there is no browser that can run this java applet today.</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
