--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                     Games by
                     <span style="color:aquamarine;">Robert Goodwin</span>
                 </div>
+                <div class="text-center" style="font-size:12px; color:white; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top:15px;">
+                    Experiments creating hybrid monsters
+                </div>
+            </div>
+
+            <div style="font-size:12px; color:white; font-family:Verdana, Geneva, Tahoma, sans-serif; margin:40px 80px 5px 80px;">
+                Hello. I like to make games. I like to make original games mixing and matching mechanics and genres, drawing inspiration from various Western and Japanese sources, often with anime-style art.
             </div>
        </div>
 
@@ -72,6 +79,8 @@
             
 
             <div id="underneath-div">
+
+                <br><br>
             
                 <div class="row center-div center-div-bullet not-coming-soon">
                     <a href="where-one-citizen/index.html">
@@ -110,7 +119,7 @@
                                     <br>~Sour into Sweet~</span>
                             </div> 
                             <div class="doing">
-                                <span class="doingB">School romance simulation that supports expansion of the story with user-created characters. Click for more info and download at RpgMaker.net</span>
+                                <span class="doingB">School romance simulation having board game mechanics that supports expansion of the story with user-created characters. Click for more info and download at RpgMaker.net</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
@@ -133,7 +142,7 @@
                                 <span id="doingA3">A Hint of a Tint</span>
                             </div> 
                             <div class="doing">
-                                <span class="doingB">A roguelike with two modes of play. Story mode has no perma-death. Survival mode does. Best played with a gamepad. Click for more info and download at RpgMaker.net</span>
+                                <span class="doingB">Narrative-driven roguelike with two modes of play. Story mode has no perma-death. Survival mode does. Best played with a gamepad. Click for more info and download at RpgMaker.net</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
