--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Original games by Robert Goodwin including Where One Citizen, Heartache 101 ~Sour into Sweet, and A Hint of a Tint">
     <meta name="author" content="Robert Goodwin">
     <meta name="keywords" content="life, simulation, games, original, heartache 101" />
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="imgs/birdie.png">
     
     <title>Games by Robert Goodwin</title>
 
