--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Where One Citizen game">
     <meta name="author" content="Robert Goodwin">
     <meta name="keywords" content="life, simulation, game, original" />
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="../imgs/birdie.png">
     
     <title>Where One Citizen</title>
 
