--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                  <div class="row center-div center-div-bullet">
                    
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
-                            <a href="https://www.ifarchive.org/if-archive/games/adrift/the_pk_girl.taf"><img src="imgs/pkgirl.jpg" class="img-responsive"></a>
+                            <img src="imgs/pkgirl.jpg" class="img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-6" id="center-div-right">
                             <div class="doing">
-                                <span id="doingA5"><a href="https://www.ifarchive.org/if-archive/games/adrift/the_pk_girl.taf">The PK Girl</a></span>
+                                <span id="doingA5">The PK Girl</span>
                             </div> 
                             <div class="doing">
                                 <span class="doingB">Interactive fiction with mystery, sci-fi, and romance themes. Requires <a href="https://www.adrift.co/download">ADRIFT Runner 4.0</a>...or used to. 
-                                The <a href="https://www.ifarchive.org/indexes/if-archive/programming/adrift/">SCARE interpreter at ifarchive.org</a> may be the best hope of getting it to run today, but sans art, music, and map.
+                                The <a href="https://www.ifarchive.org/indexes/if-archive/programming/adrift/">SCARE interpreter at ifarchive.org</a> seems the best hope of getting it to run today, but sans art, music, and map.
                                 <br><a href="https://www.ifarchive.org/if-archive/games/adrift/the_pk_girl.taf">Game download (release 4) from ifarchive.org</a>
                                 <!--<br>Game itself is available at any of the following:
                                 <ul>
@@ -215,11 +215,11 @@
                  <div class="row center-div center-div-bullet">
                     
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
-                            <a href="https://www.ifarchive.org/if-archive/games/adrift/3monkeys.taf"><img src="imgs/threemonkeys.jpg" class="img-responsive"></a>
+                            <img src="imgs/threemonkeys.jpg" class="img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-6" id="center-div-right">
                             <div class="doing">
-                                <a href="https://www.ifarchive.org/if-archive/games/adrift/3monkeys.taf"><span id="doingA6">Three Monkeys One Cage</span></a>
+                                <span id="doingA6">Three Monkeys One Cage</span>
                             </div> 
                             <div class="doing">
                                 <span class="doingB">
