--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -320,7 +320,14 @@
                 </div>
 
 
-                <br><br><br><br>
+		<br><br><br>
+
+		<div class="text-center" style="font-size:18px; font-family:Tahoma, san-serif;">Start your life in Earth City.</div>
+		<br>
+ 		<div class="text-center" style="font-size:14px; font-family:Tahoma, san-serif;">Make a home. Make a career. Make friends. Make romances.</div>
+
+
+                <br><br><br><br><br>
 
 
 
