--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                              <div class="doing">
                                 <span class="robertnote">Author note:</span>
                                 <span class="doingC">
-                                    As of January 2022 it has been in development for a decade already. Not ready for release yet, but more ready than not.
+                                    As of May 2022 it has been in development for a decade already. Nearly ready for first release.
                                 </span>
                             </div>
                              <div class="doingD">Work in progress</div>
