--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -73,7 +73,7 @@
 
                 <div id="new-news" class="text-center" style="font-size:14px; margin:5% 5% 3% 5%;">
                     <div style="font-size: 18px; font-family:Arial, Helvetica, sans-serif; padding-bottom:10px;">
-                        Updates
+                        Latest Update
                     </div>
                     
                     <span class="news-datestring">
@@ -81,7 +81,7 @@
                     </span> 
                     ~
                     <span class="news-item">
-                        Entering beta-testing
+                        Entering beta-testing for Windows & Mac
                     </span>
                 </div>
                 
