--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -324,7 +324,7 @@
 
 		<div class="text-center" style="font-size:18px; font-family:Tahoma, san-serif;">Start your life in Earth City.</div>
 		<br>
- 		<div class="text-center" style="font-size:14px; font-family:Tahoma, san-serif;">Make a home. Make a career. Make friends. Make romances.</div>
+ 		<div class="text-center" style="font-size:14px; font-family:Tahoma, san-serif;">Make a home. Make a career. Make friends. Make romances. Make a name for yourself.</div>
 
 
                 <br><br><br><br><br>
