--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
                              <div class="doing">
                                 <span class="robertnote">Author note:</span>
                                 <span class="doingC">
-                                    As of May 2022 it has been in development for a decade already. Nearly ready for first release.
+                                    My largest experiment, a decade in the making
                                 </span>
                             </div>
-                             <div class="doingD">Work in progress</div>
+                             <div class="doingD">7-23-2022 Beta now available to play!</div>
+							 
                         </div>
                     </a>                    
                 </div>
