--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -260,10 +260,10 @@
 
 				<div style="font-size:16px; margin-left:10%; margin-right:10%; margin-top:20px; margin-bottom:40px;">
 					<img src="../imgs/birdie.png" align="left">&nbsp;&nbsp;&nbsp;
-					<span style="font-size:20px;">An open-ended system</span>
+					<span style="font-size:20px;">An open-ended system...</span>
 					<br><br>
 					<div style="margin-left:50px; font-size:14px;">
-						The "main" story is somewhat hidden. There are endings...if you can find them. 
+						...but with perma-failure. The "main" story is somewhat hidden. There are endings...if you can find them. 
 					</div>
                 
 				</div>
@@ -273,7 +273,7 @@
 					<span style="font-size:20px;">Optional romance element</span>
 					<br><br>
 					<div style="margin-left:50px; font-size:14px;">
-						Four orientations are supported. Harem situations are possible.
+						Four orientations are supported. Harem situations are possible. Additionally, you can sometimes influence relationships between npcs as match-maker or match-"breaker".
 					</div>
 					
 					<div style="font-size:14px; margin:0% 20px; padding:0px 30px;" class="text-center">
