--- a/where-one-citizen/index.html
+++ b/where-one-citizen/index.html
@@ -155,7 +155,7 @@
             <div id="story-div">
                 Earth City. The most prestigious new metropolis built in the 23rd century. A fusion of practical modern technology with the best features, styles, and architectures of cultures long past.
                 <br><br>
-                For the first half-century since its establishment, none but its founding settlers were permitted citizenship.... Until the day Earth City began accepting new arrivals who could pass a screening process. Very rapidly the younger generation became the overwhelming majority of its population and began to enjoy the privileges of life in this renowned utopia.
+                For the first half-century since its establishment, none but its founding settlers were permitted citizenship.... Until the day Earth City began accepting new arrivals who could pass a screening process. Very rapidly the younger generation became the overwhelming majority of its population and began to enjoy the privileges of life in this renowned land.
                 <br><br>
                 However, the older generation was guarding a secret they dared not share.       
             </div>
@@ -388,10 +388,10 @@
                 </div>
 				
 				<div class="text-center" style="font-size:16px;">
-					<br>version 2.3.0
+					<br>8-7-2022 version 2.3.1
 					<br>
-					<br><a href="https://drive.google.com/file/d/1PhFH7_gcHIoi31XsRUuGWDpUtM6B_F04/view?usp=sharing">DOWNLOAD for Windows</a>
-					<br><a href="https://drive.google.com/file/d/1Y2ACCjiaTUHO9H3rw0j8hyhVadtszVeJ/view?usp=sharing">DOWNLOAD for MacOS</a>
+					<br><a href="https://drive.google.com/file/d/1iQInEmt_Hn-lLdCPRmIf_TqjOPPK6pCo/view?usp=sharing">DOWNLOAD for Windows</a>
+					<br><a href="https://drive.google.com/file/d/1je2rjBLvZrhFS6Je1-DWQkWrk5WGn6tV/view?usp=sharing">DOWNLOAD for MacOS</a>
 					<br>
 					<br>
 				</div>
