--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                              <div class="doing">
                                 <span class="robertnote">Author note:</span>
                                 <span class="doingC">
-                                    My largest experiment, a decade in the making
+                                    My largest experiment, a decade in the making.
                                 </span>
                             </div>
                              <div class="doingD">7-23-2022 Beta now available to play!</div>
@@ -116,14 +116,14 @@
 					
                     <a href="">
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
-                            <img src="imgs/thanato.jpg" class="img-responsive">
+                            <img src="imgs/midjourney_hall_smaller.jpg" class="img-responsive">
                         </div>
                         <div class="col-xs-12 col-sm-6" id="center-div-right">
                             <div class="doing">
                                 <span id="doingA8">Thanatophobia
                             </div> 
                             <div class="doing">
-                                <span class="doingB">A simple text-based chatbot/game about helping a young woman with a mental illness. Mature themes. Playable online.</span>
+                                <span class="doingB">A simple text-based chatbot/game about helping a young woman with a mental illness. Playable online.</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
