--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@
                     </a>                    
                 </div>
 				
-				<div class="row center-div center-div-bullet coming-soon">
-					<div class="coming-soon-text">
+				<div class="row center-div center-div-bullet not-coming-soon">
+					<!--<div class="coming-soon-text">
                         Coming soon
-                    </div>
-					
-                    <a href="">
+                    </div>-->
+					<a href="thana.html">
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
                             <img src="imgs/midjourney_hall_smaller.jpg" class="img-responsive">
                         </div>
@@ -123,7 +122,7 @@
                                 <span id="doingA8">Thanatophobia
                             </div> 
                             <div class="doing">
-                                <span class="doingB">A simple text-based chatbot/game about helping a young woman with a mental illness. Playable online.</span>
+                                <span class="doingB">A simple text-based game about helping a young woman with a mental illness. Psychological horror. Playable online.</span>
                             </div>
                             <div class="doing">
                                 <span class="robertnote">Author note:</span>
@@ -131,7 +130,7 @@
                                     Wait, is it a chatbot or is it a game? It's both!
                                 </span>
                             </div>
-                            <div class="doingD">Coming soon in 2022</div>
+                            <div class="doingD">Released 2022</div>
                         </div>
                     </a>
                 </div>
