--- a/thana_making_of.html
+++ b/thana_making_of.html
@@ -247,8 +247,8 @@
                     There is nothing in the game that I thought would warrant it at first, but hastily added support for the "they" pronoun when I realized how many players were referring to the hooded figure as "they".
                 
                     <div class="aican">3. Memory</div>
-                    An AI appears intelligent when it can remember facts taught to it and demonstrate it still remembers them at a later time.
-                    Especially when they bring up those facts on their own.
+                    An AI appears intelligent when it can remember facts taught to it and demonstrate it still remembers them at a later time, 
+                    or even bring up those facts on its own.
                     <!--, i.e.
                     "So, you know how you were telling me yesterday that your brother likes poodles?"-->
                     <span style="font-style:italic;">Thanatophobia</span> can do a tiny bit of this.
@@ -306,7 +306,7 @@
                 </p>
 
                 <p>
-                    But it is difficult to think of something you might want an AI to do that is not possible in Chatscript.
+                    But it is difficult to think of something you might want a conversational AI to do that is not possible in Chatscript.
                 </p>
 
                 <p>
