--- a/thana_making_of.html
+++ b/thana_making_of.html
@@ -370,7 +370,7 @@
                 </p>
                 Around 40% of the people who try the game do go on to complete it.
                 There are numerous mechanisms in place to steer the player towards the ending, such that I think that anyone who understands English and gives it an honest shot will complete it.
-                Logs bear this out. Number of inputs in winnning games ranges between 60 and 350, but it has been the case so far that every player who has put in 60 or more inputs has gone on to win.
+                Logs bear this out. Number of inputs in winnning games ranges between 60 and 350, but at the time of writing this it has been the case that every player who has put in 60 or more inputs has gone on to win.
                 <p>
 
                 </p>
