--- a/thana_making_of.html
+++ b/thana_making_of.html
@@ -114,8 +114,8 @@
                 <p>
                     
                     <span style="font-style:italic;">Thanatophobia</span> tries to be 3 things at once--a game, a story, and an open-ended conversational AI with natural language parser aka a "chatbot".
-                    If evaluated by any one of these alone, it is not very good at what it does.
-                    It is not a very fun game compared to many other games, 
+                    If evaluated by any one of these alone, it is probably not very good at what it does.
+                    It is probably not a very fun game compared to many other games, 
                     not a very good story compared to many other stories, 
                     not a very smart AI compared to many other AIs.
                 </p>
@@ -123,11 +123,11 @@
                 <p>
                     But flawed though <span style="font-style:italic;">Thanatophobia</span> is (and ignoring the shortness of the experience),
                     I am not sure there has been any game, past or present, commerical or free, with a stronger natural language parser than its.
-                    Possibly <span style="font-style:italic;">Event[0]</span>.
+                    Possibly <span style="font-style:italic;">Event[0]</span>. If there's another game that does natural language better I'd like to try it!
                 </p>
                 
                 <p>
-                    That's not as bold a claim as it might sound. 
+                    This is not as bold a claim as it might sound. 
 			(and I promise I won't be tooting my own horn throughout all of this)
                     Natural language parsing in games is seldom attempted.
 			
