thana no need ipv6

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<!--<div class="coming-soon-text">
                         Coming soon
                     </div>-->
-					<a href="thana.html">
+					<a href="https://www.chattyfiction.cyou/index.php"> <!--<a href="thana.html">-->
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
                             <img src="imgs/midjourney_hall_smaller.jpg" class="img-responsive">
                         </div>
