--- a/thana_making_of.html
+++ b/thana_making_of.html
@@ -224,6 +224,9 @@
                     but those who want narrative that is handcrafted by an author need to be okay with AI that is handcrafted, and the limitations that go with it.
                 </p>
 
+		<p>Edit: I recently, however, discovered <a href="https://inworld.ai/">Inworld</a> and it's promising!
+		</p>
+
             </div>
 
             <div class="paragraph-title">
