cheree added to site

--- a/index.html
+++ b/index.html
@@ -82,6 +82,41 @@
 
                 <br><br>
             
+                <div class="row center-div center-div-bullet coming-soon">
+                    <a href="">
+                        <div class="coming-soon-text">
+                            Coming Soon
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6" id="center-div-left">
+                            <img src="imgs/cheree.jpg" class="img-responsive">
+                        </div>
+                        <div class="col-xs-12 col-sm-6" id="center-div-right">
+                            <div class="doing">
+                                <span id="doingA6">Cheree: Remembering My Murder</span>
+                            </div> 
+                            <div class="doing">
+                                <span class="doingB" style="font-size:13px;">
+                                    Cheree doesn't know how she died. She doesn't even know why she doesn't know.
+                                    By "traveling" to dozens of locations and chatting with her about diverse topics, the two of you will discover clues to
+                                    unravel a 100-year mystery.
+                                </span>
+                            </div>
+                            <!--<a href="devices/index.html">
+                                <div id="price-part">See our devices</div>
+                             </a>-->
+                             <div class="doing">
+                                <span class="robertnote">Author note:</span>
+                                <span class="doingC">
+                                    Visual novel meets chatbot.
+                                </span>
+                            </div>
+                             <div class="doingD">To be released Spring 2023</div>
+							 
+                        </div>
+                    </a>                    
+                </div>
+
                 <div class="row center-div center-div-bullet not-coming-soon">
                     <a href="where-one-citizen/index.html">
                         <div class="col-xs-12 col-sm-6" id="center-div-left">
@@ -246,7 +281,7 @@
                         </div>
                         <div class="col-xs-12 col-sm-6" id="center-div-right">
                             <div class="doing">
-                                <span id="doingA6">Three Monkeys One Cage</span>
+                                <span id="doingA9">Three Monkeys One Cage</span>
                             </div> 
                             <div class="doing">
                                 <span class="doingB">
