--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     Visual novel meets chatbot.
                                 </span>
                             </div>
-                             <div class="doingD">Released Spring 2023</div>
+                             <div class="doingD">Released 2023</div>
 							 
                         </div>
                     </a>                    
