--- a/files/index.html
+++ b/files/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Cheree: RMM">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <link rel="apple-touch-icon" href="assets/icons/cheree-192.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
